[metadata]
version = 0.2.3
name = elegant
summary = Elegant theme for Pelican static content generator
description-file = README.md
license = MIT
classifiers = 
	Topic :: Utilities
author = Elegant Team
author-email = talha131@gmail.com
home-page = https://github.com/Pelican-Elegant/elegant
package_data={}
include_package_data=True,

[files]

[entry_points]

[nosetests]
detailed-errors = 1
with-coverage = 1
cover-package = 
cover-erase = 1
verbosity = 2

[extract_messages]

